deployment-svc-full/svc-my-api-layer1-lb-1.0.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-lb-layer1
  namespace: jaav  
spec:
  type: LoadBalancer #NodePort #ClusterIP
  selector:
    app: my-api-layer1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8088 # puertos que usan los pods
