deployment-svc-full/svc-my-api-layer2-1.0.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api-layer2
  namespace: jaav
spec:
  type: ClusterIP
  selector:
    app: my-api-layer2    
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8088 # puertos que usan los pods

# kubectl exec -it pod-name -- sh
# apk add --no-cache curl
# curl cluster-ip:80
# -> cluster-ip es el valor de clusterIP en tu servicio.
