deployment-svc-full/ingress-my-api-layer1-2.0.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-api-layer1
  namespace: jaav
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: my-api-layer1
              port:
                number: 80
